--- a/CSS/index.css
+++ b/CSS/index.css
@@ -21,7 +21,7 @@
   margin-top: -22px;
   margin-left: -5%;
   padding: 16px;
-  color: white;
+  color: black;
   font-weight: bold;
   font-size: 18px;
   transition: 0.6s ease;
@@ -37,7 +37,7 @@
 
 /* On hover, add a black background color with a little bit see-through */
 .prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
+  background-color: rgba(204,204,204,0.8);
 }
 
 /* The dots/bullets/indicators */
@@ -75,8 +75,7 @@
 }
 
 body {
-    background-image: url("../Resources/Kitty.png");
-    background-color: #cccccc;
+    background-image: url("../Resources/logo.png");
     background-size: 70% ;
     background-repeat: no-repeat;
     background-position: 50% 0%;
